--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tool-tray"
-version = "0.1.1"
+version = "0.2.0"
 description = "System tray tool manager for private GitHub tools via uv"
 readme = "README.md"
 authors = [
@@ -12,6 +12,9 @@ dependencies = [
     "pillow>=12.1.0",
     "pystray>=0.19.5",
 ]
+
+[project.optional-dependencies]
+desktop = ["pyshortcuts>=1.9"]
 
 [project.scripts]
 tooltray = "tool_tray:main"
