--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tool-tray"
-version = "0.2.3"
+version = "0.3.1"
 description = "System tray tool manager for private GitHub tools via uv"
 readme = "README.md"
 authors = [
@@ -10,11 +10,9 @@ requires-python = ">=3.12"
 dependencies = [
     "httpx>=0.28.1",
     "pillow>=12.1.0",
+    "pyshortcuts>=1.9.7",
     "pystray>=0.19.5",
 ]
-
-[project.optional-dependencies]
-desktop = ["pyshortcuts>=1.9"]
 
 [project.scripts]
 tooltray = "tool_tray:main"
